ux implemented on hero section and vendors page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="kaba .png.ico" />
+    <!-- icon  -->
+    <link rel="icon" href="presents.png.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,9 +12,11 @@
   />
   <meta property="og:title" content="say 'i do' to the perfect wedding gift" />
   <meta property="og:description" content="We provide to you the best and simplest way of creating gift registries" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="Kaba .png.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/kaba .png.ico" />
+  <meta property="og:url" content="presents.png" />
+  <!-- icon  -->
+  <meta property="og:image" content="presents.png" />
+  <!-- icon  -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
